--- a/src/AdsClient.Test/AdsClient.Test.csproj
+++ b/src/AdsClient.Test/AdsClient.Test.csproj
@@ -10,7 +10,7 @@
     <RootNamespace>Ads.Client.Test</RootNamespace>
     <AssemblyName>AdsClient.Test</AssemblyName>
     <ReleaseVersion>0.6.0</ReleaseVersion>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <UseMSBuildEngine>False</UseMSBuildEngine>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -45,7 +45,9 @@
     <Compile Include="AmsSocketSyncTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AdsClient\Ads.Client.csproj">
